config/instances/manuela-stormshift/line-dashboard/line-dashboard-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manuela-stormshift-line-dashboard
