config/instances/manuela-stormshift/line-dashboard/line-dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: line-dashboard
spec:
  host: line-dashboard-manuela-stormshift-line-dashboard.apps.edge-mgmt-hub.gcp.devcluster.openshift.com
